2A/05_Projet_GL/src/test/deca/context/invalid/complet/99_passer_classe_print.deca
// Description :
//  test sur print avce class 
// Resultats :
//    ligne 15 :  le type attendu int , ﬂoat , string
// Historique : 
//  cree le 22/01/2024

class A {

}


{
    A a ;
    print(a);
}